crates/pixi_core/src/workspace/snapshots/pixi_core__workspace__tests__activation_scripts.snap
---
source: src/workspace/mod.rs
expression: "format!(\"= Linux64\\n{}\\n\\n= Win64\\n{}\\n\\n= OsxArm64\\n{}\",\nfmt_activation_scripts(workspace.default_environment().activation_scripts(Some(Platform::Linux64))),\nfmt_activation_scripts(workspace.default_environment().activation_scripts(Some(Platform::Win64))),\nfmt_activation_scripts(workspace.default_environment().activation_scripts(Some(Platform::OsxArm64))))"
---
= Linux64
Cargo.toml

= Win64
Cargo.lock

= OsxArm64
pixi.toml
pixi.lock
