crates/pixi_core/src/workspace/snapshots/pixi_core__workspace__tests__mapping_ensure_feature_channels_also_checked.snap
---
source: src/workspace/mod.rs
expression: workspace.pypi_name_mapping_source().unwrap_err()
---
conda-pypi-map is defined: the non-existing-channel is missing from the channels array, which currently are: conda-forge, pytorch
